Finally added placeholder image

--- a/home.html
+++ b/home.html
@@ -20,14 +20,14 @@
                         <p style="display:inline; width:50vw; float:left;">
                             <b>Hello! My name is Richie, although I typically go by Raymond.</b> I'm an undergraduate Computer Engineering student at the California State Polytechnic University, Pomona.
                             <br><br>
-                            <b>I'm a quick learner and a challenger-seeker,</b> who has experience with Verilog, Python, Java, JavaScript, and TypeScript among other languages. While I've worked with FPGAs, microcontrollers, and even in software, I'm looking to work more with HDL languages and FPGAs in the future. If you're still interested in my skills, feel free to look through my <a href="#projects" onclick="hideSection('aboutme')">projects</a> and <a href="#experience" onclick="hideSection('aboutme')">experience</a> for more information.
+                            <b>I'm a quick learner and a challenger-seeker,</b> who has experience in Verilog, Python, Java, and JS/TS among other languages. While I've worked with FPGAs, microcontrollers, and even in software, I'm looking to work more with HDL languages and FPGAs in the future. If you're still interested in my skills, feel free to look through my <a href="#projects" onclick="hideSection('aboutme')">projects</a> and <a href="#experience" onclick="hideSection('aboutme')">experience</a> for more information.
                             <br><br>
-                            <b>I'm motivated by the idea of pushing what I'm capable of,</b> whether it's in a project I'm pursuing or a game I'm trying something new in. These self-challenges can range from physical scaling constraints to time constraints, or can even affect how I implement the project entirely. If I'm confident I can achieve a task in a certain manner, I begin looking for ways I can improve how the task.
+                            <b>I'm motivated by the idea of pushing what I'm capable of,</b> whether it's in a project I'm pursuing or a game I'm trying something new in. These self-challenges can range from physical scaling constraints to time constraints, or can even affect how I implement the project entirely. If I'm confident I can achieve a task in a certain manner, I begin looking for ways I can improve how the task is achieved.
                             <br><br>
-                            <b>I hope to eventually work on the cutting-edge of the aerospace industry,</b> where I can use my skills to help push human innovation.
-                            <!-- TODO elaborate on exploratory projects (bomber vs museum analogy)-->
+                            <b>I hope to eventually work on the cutting-edge of the aerospace industry,</b> where I can use my skills to help push human innovation. While I do hope to work on cutting-edge technology in time, &lt...&gt
+                            <!-- TODO elaborate on exploratory projects (working on bomber vs museum analogy)-->
                         </p>
-                        <img src="./images/portrait.jpg" style="width:20vw; display:inline; float:right;">
+                        <img src="./images/placeholder.png" style="width:20vw; display:inline; float:right;">
                     </div>
                 </div>
             </div>
@@ -63,7 +63,7 @@
                     <p>I'm always striving to improve my skills, thus all my projects below are built upon lessons learned from previous projects. Each project differs by either applying familiar concepts in more challenging ways or introducing a concept I haven't yet experimented with.<br><br>Projects preceded by another project marks that there were lessons carried over from the development of the peceding project.</p>
                     <div class="projects-container">
                         <!-- <div>
-                            <img src="./images/portrait.JPG" class="thumbnail"/>
+                            <img src="./images/placeholder.png" class="thumbnail"/>
                             <span></span>
                             <h3>"Waveform" VALORANT Replica</h3>
                             <img src="https://img.shields.io/badge/Completed_2022-green" class="project-status">
@@ -89,31 +89,31 @@
                             </p>
                         </div>
                         <div>
-                            <img src="./images/portrait.jpg" class="thumbnail"/>
+                            <img src="./images/placeholder.png" class="thumbnail"/>
                             <span></span>
                             <h3>FIFO stack Verilog demo</h3>
                             <img src="https://img.shields.io/badge/Assignment-blue" class="project-status">
                             <img src="https://img.shields.io/badge/Completed_2023-green" class="project-status">
                             <p>
-                                A small first-in-first-out buffer demonstration implemented on the Digilent's Nexys A7 dev board. The buffer contains 8 slots which can carry 4 bits each (or one hex digit), and is displayed on the 8 seven-segment-display digits provided on the Nexys A7.
+                                (ECE 3300 Lab 9) A small first-in-first-out buffer demonstration implemented on the Digilent's Nexys A7 dev board. The buffer contains 8 slots which can carry 4 bits each (or one hex digit), and is displayed on the 8 seven-segment-display digits provided on the Nexys A7.
                             </p>
                         </div>
                         <div>
-                            <img src="./images/portrait.JPG" class="thumbnail"/>
+                            <img src="./images/placeholder.png" class="thumbnail"/>
                             <span></span>
                             <h3>"Turtleback" Electric Longboard</h3>
                             <img src="https://img.shields.io/badge/In_Progress-yellow" class="project-status">
                             <p>The <em>Turtleback</em> is a personal motorized longboard, with a custom-built chasis and driven by an Arduino Uno.</p>
                         </div>
                         <div>
-                            <img src="./images/portrait.JPG" class="thumbnail"/>
+                            <img src="./images/placeholder.png" class="thumbnail"/>
                             <span></span>
                             <h3>"Mechy" Micro-sized RC</h3>
                             <img src="https://img.shields.io/badge/Planned 2024-red" class="project-status">
                             <p><em>Mechy (ver. III)</em> is a miniaturized remote-controlled device, built around a Raspberry Pi Pico W and a custom PCB motor shield.</p> <!-- The outer shell is 3D printed and the total weight is around 50 grams. -->
                         </div>
                         <div>
-                            <img src="./images/portrait.JPG" class="thumbnail"/>
+                            <img src="./images/placeholder.png" class="thumbnail"/>
                             <span></span>
                             <h3>FPGA-Powered Record Player</h3>
                             <img src="https://img.shields.io/badge/Planned 2024-red" class="project-status">
