Content positioning fix
In hobbies section

--- a/home.html
+++ b/home.html
@@ -129,7 +129,7 @@
                     <div class="hobbies-container">
                         <div>
                             <h3>3D Printing</h3>
-                            <img src="./images/0-8-4.jpeg" class="thumbnail">
+                            <img src="./images/placeholder.png" class="thumbnail">
                             <p>In my free time...</p>
                         </div>
                         <div>
@@ -142,6 +142,7 @@
                         </div>
                         <div>
                             <h3>Sandbox & Story Games</h3>
+                            <img src="./images/ksp.png" class="thumbnail">
                             <p>I enjoy a mix of narrative and challenge-based games, such as Fallout, Portal, and Kerbal Space Program.</p>
                         </div>
                     </div>
