--- a/home.html
+++ b/home.html
@@ -101,6 +101,15 @@
                         <div>
                             <img src="./images/placeholder.png" class="thumbnail"/>
                             <span></span>
+                            <h3>FPGA-based Digital Alarm Clock</h3>
+                            <img src="https://img.shields.io/badge/In_Progress-yellow" class="project-status">
+                            <p>
+                                A simple alarm clock implemented on a Nexys A7.
+                            </p>
+                        </div>
+                        <div>
+                            <img src="./images/placeholder.png" class="thumbnail"/>
+                            <span></span>
                             <h3>"Turtleback" Electric Longboard</h3>
                             <img src="https://img.shields.io/badge/In_Progress-yellow" class="project-status">
                             <p>The <em>Turtleback</em> is a personal motorized longboard, with a custom-built chasis and driven by an Arduino Uno.</p>
@@ -129,21 +138,31 @@
                     <div class="hobbies-container">
                         <div>
                             <h3>3D Printing</h3>
-                            <img src="./images/placeholder.png" class="thumbnail">
+                            <img src="./images/3d_print.jpg" class="thumbnail">
                             <p>In my free time...</p>
                         </div>
                         <div>
                             <h3>Photography</h3>
-                            <p>Every photograph shown on my portfolio was taken by me!</p>
+                            <img src="./images/raspi_camera.jpg" class="thumbnail">
+                            <p>
+                                Every photograph shown on my portfolio was captured by me!
+                                <br><br>
+                                I rely mostly on a Canon SX-510, but I don't mind using a smartphone camera if it means capturing a photo before it's gone.
+                            </p>
                         </div>
                         <div>
                             <h3>Rock Climbing</h3>
-                            <p>Between classes...</p>
+                            <img src="./images/placeholder.png" class="thumbnail">
+                            <p>Between classes,</p>
                         </div>
                         <div>
                             <h3>Sandbox & Story Games</h3>
                             <img src="./images/ksp.png" class="thumbnail">
-                            <p>I enjoy a mix of narrative and challenge-based games, such as Fallout, Portal, and Kerbal Space Program.</p>
+                            <p>
+                                I enjoy a mix of narrative and challenge-based games, such as <b>Fallout</b>, <b>Portal 1 & 2</b>, and <b>Kerbal Space Program</b> ("KSP")!
+                                <br><br>
+                                This screenshot is an image of a KSP mission to place a handful of relay sattelites in low orbit as a demonstration of my CS-10 <em>Rosau</em>-class space shuttle's payload capabilities.
+                            </p>
                         </div>
                     </div>
                 </div>
