Moving styles into dedicated folder

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- Look at you sneaky person, breaking in early O_O -->
         <!-- <meta http-equiv="refresh" content="0;URL=/home.html" /> -->
-        <link rel="stylesheet" type="text/css" href="main.css"/>
+        <link rel="stylesheet" type="text/css" href="styles/main.css"/>
         <style>
         body {
             overflow: hidden; /* Hide scrollbars */
