Portfolio page stuff

--- a/portfolio.html
+++ b/portfolio.html
@@ -1,16 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF=8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" type="text/css" href="styles/portfolio.css"/>
-        <title>𝘙. 𝘞𝘰𝘯𝘨 - 𝘗𝘰𝘳𝘵𝘧𝘰𝘭𝘪𝘰</title>
-        <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/597/597874.png">
-    </head>
-    <body style="background-color:rgb(40, 40, 40);">
-        <!-- TODO this -->
-    </body>
+
+<head>
+    <meta charset="UTF=8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="styles/portfolio.css" />
+    <script src="./portfolio.js"></script>
+    <script type="module" src="https://md-block.verou.me/md-block.js"></script> <!-- Used for markdown rendering -->
+    <title>𝘙. 𝘞𝘰𝘯𝘨 - 𝘗𝘰𝘳𝘵𝘧𝘰𝘭𝘪𝘰</title>
+    <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/597/597874.png">
+</head>
+
+<body id="body">
+    <div id="portfolio-container">
+        <h1 class="centered">Raymond's Project Portfolio</h1>
+
+        <button class="project-link" onclick="showProjectViewer('game_of_life')">
+            <h2 class="project-title">Conway's <em>Game of Life</em> in Verilog</h2>
+            <div class="project-status-tags">
+                <img src="https://img.shields.io/badge/Assignment-blue">
+                <img src="https://img.shields.io/badge/Completed_2023-green">
+            </div>
+            <img src="./images/game-of-life.jpg" class="thumbnail">
+        </button>
+
+        <button class="project-link" onclick="showProjectViewer('template')">
+            <h2 class="project-title">FIFO stack Verilog demo</h2>
+            <div class="project-status-tags">
+                <img src="https://img.shields.io/badge/Assignment-blue">
+                <img src="https://img.shields.io/badge/Completed_2023-green">
+            </div>
+            <img src="./images/3d_print.jpg" class="thumbnail">
+        </button>
+
+        <button class="project-link" onclick="showProjectViewer('template')">
+            <h2 class="project-title">FPGA-based Digital Alarm Clock</h2>
+            <div class="project-status-tags">
+                <img src="https://img.shields.io/badge/In_Progress-yellow">
+            </div>
+
+            <img src="./images/jpl.jpeg" class="thumbnail">
+        </button>
+
+        <button class="project-link" onclick="showProjectViewer('template')">
+            <h2 class="project-title">Electric Longboard</h2>
+            <div class="project-status-tags">
+                <img src="https://img.shields.io/badge/In_Progress-yellow">
+            </div>
+            <img src="./images/hotel-california.jpg" class="thumbnail">
+        </button>
+
+        <button class="project-link" onclick="showProjectViewer('template')">
+            <h2 class="project-title">"Mechy" Raspberry Pi Pico Motor Shield</h2>
+            <div class="project-status-tags">
+                <img src="https://img.shields.io/badge/Planned 2024-red">
+            </div>
+            <img src="./images/0-8-4.jpeg" class="thumbnail">
+        </button>
+
+        <button class="project-link" onclick="showProjectViewer('template')">
+            <h2 class="project-title">FPGA-Powered Record Player</h2>
+            <div class="project-status-tags">
+                <img src="https://img.shields.io/badge/Planned 2024-red">
+            </div>
+            <img src="./images/jpl.jpeg" class="thumbnail">
+        </button>
+    </div>
+    <div id="project-viewer" class="hidden">
+        <button id="close-project" onclick="hideProjectViewer()">≪ BACK</button>
+        <md-block id="markdown-renderer" src/>
+    </div>
+</body>
+
 </html>
 <!-- Made by yours truly 😉 ~Raymond -->
 <!-- source: https://github.com/Raymond-exe/raymond-exe.github.io/ -->
