More portfolio page stuff

--- a/portfolio.html
+++ b/portfolio.html
@@ -14,55 +14,69 @@
 
 <body id="body">
     <div id="portfolio-container">
-        <h1 class="centered">Raymond's Project Portfolio</h1>
+        <div>
+            <h1 class="centered">Raymond Wong</h1>
+            <h3 class="centered">COMPUTER ENGINEERING // PROJECT PORTFOLIO</h3>
+        </div>
 
         <button class="project-link" onclick="showProjectViewer('game_of_life')">
-            <h2 class="project-title">Conway's <em>Game of Life</em> in Verilog</h2>
-            <div class="project-status-tags">
-                <img src="https://img.shields.io/badge/Assignment-blue">
-                <img src="https://img.shields.io/badge/Completed_2023-green">
+            <div class="project-info">
+                <h2 class="project-title">Conway's <em>Game of Life</em> in Verilog</h2>
+                <div class="project-status-tags">
+                    <img src="https://img.shields.io/badge/Assignment-blue">
+                    <img src="https://img.shields.io/badge/Completed_2023-green">
+                </div>
             </div>
             <img src="./images/game-of-life.jpg" class="thumbnail">
         </button>
 
         <button class="project-link" onclick="showProjectViewer('template')">
-            <h2 class="project-title">FIFO stack Verilog demo</h2>
-            <div class="project-status-tags">
-                <img src="https://img.shields.io/badge/Assignment-blue">
-                <img src="https://img.shields.io/badge/Completed_2023-green">
+            <div class="project-info">
+                <h2 class="project-title">FIFO stack Verilog demo</h2>
+                <div class="project-status-tags">
+                    <img src="https://img.shields.io/badge/Assignment-blue">
+                    <img src="https://img.shields.io/badge/Completed_2023-green">
+                </div>
             </div>
             <img src="./images/3d_print.jpg" class="thumbnail">
         </button>
 
         <button class="project-link" onclick="showProjectViewer('template')">
-            <h2 class="project-title">FPGA-based Digital Alarm Clock</h2>
-            <div class="project-status-tags">
-                <img src="https://img.shields.io/badge/In_Progress-yellow">
+            <div class="project-info">
+                <h2 class="project-title">FPGA-based Digital Alarm Clock</h2>
+                <div class="project-status-tags">
+                    <img src="https://img.shields.io/badge/In_Progress-yellow">
+                </div>
             </div>
-
             <img src="./images/jpl.jpeg" class="thumbnail">
         </button>
 
         <button class="project-link" onclick="showProjectViewer('template')">
-            <h2 class="project-title">Electric Longboard</h2>
-            <div class="project-status-tags">
-                <img src="https://img.shields.io/badge/In_Progress-yellow">
+            <div class="project-info">
+                <h2 class="project-title">Electric Longboard</h2>
+                <div class="project-status-tags">
+                    <img src="https://img.shields.io/badge/In_Progress-yellow">
+                </div>
             </div>
             <img src="./images/hotel-california.jpg" class="thumbnail">
         </button>
 
         <button class="project-link" onclick="showProjectViewer('template')">
-            <h2 class="project-title">"Mechy" Raspberry Pi Pico Motor Shield</h2>
-            <div class="project-status-tags">
-                <img src="https://img.shields.io/badge/Planned 2024-red">
+            <div class="project-info">
+                <h2 class="project-title">"Mechy" Raspberry Pi Pico Motor Shield</h2>
+                <div class="project-status-tags">
+                    <img src="https://img.shields.io/badge/Planned 2024-red">
+                </div>
             </div>
             <img src="./images/0-8-4.jpeg" class="thumbnail">
         </button>
 
         <button class="project-link" onclick="showProjectViewer('template')">
-            <h2 class="project-title">FPGA-Powered Record Player</h2>
-            <div class="project-status-tags">
-                <img src="https://img.shields.io/badge/Planned 2024-red">
+            <div class="project-info">
+                <h2 class="project-title">FPGA-Powered Record Player</h2>
+                <div class="project-status-tags">
+                    <img src="https://img.shields.io/badge/Planned 2024-red">
+                </div>
             </div>
             <img src="./images/jpl.jpeg" class="thumbnail">
         </button>
