--- a/portfolio.html
+++ b/portfolio.html
@@ -30,7 +30,7 @@
             <img src="./images/game-of-life.jpg" class="thumbnail">
         </button>
 
-        <button class="project-link" onclick="showProjectViewer('template')">
+        <button class="project-link" onclick="showProjectViewer('fifo_stack')">
             <div class="project-info">
                 <h2 class="project-title">FIFO stack Verilog demo</h2>
                 <div class="project-status-tags">
@@ -41,7 +41,7 @@
             <img src="./images/3d_print.jpg" class="thumbnail">
         </button>
 
-        <button class="project-link" onclick="showProjectViewer('template')">
+        <!-- <button class="project-link" onclick="showProjectViewer('fpga_clock')">
             <div class="project-info">
                 <h2 class="project-title">FPGA-based Digital Alarm Clock</h2>
                 <div class="project-status-tags">
@@ -49,9 +49,9 @@
                 </div>
             </div>
             <img src="./images/jpl.jpeg" class="thumbnail">
-        </button>
+        </button> -->
 
-        <button class="project-link" onclick="showProjectViewer('template')">
+        <button class="project-link" onclick="showProjectViewer('longboard')">
             <div class="project-info">
                 <h2 class="project-title">Electric Longboard</h2>
                 <div class="project-status-tags">
@@ -61,7 +61,7 @@
             <img src="./images/hotel-california.jpg" class="thumbnail">
         </button>
 
-        <button class="project-link" onclick="showProjectViewer('template')">
+        <button class="project-link" onclick="showProjectViewer('mechy')">
             <div class="project-info">
                 <h2 class="project-title">"Mechy" Raspberry Pi Pico Motor Shield</h2>
                 <div class="project-status-tags">
@@ -71,7 +71,7 @@
             <img src="./images/0-8-4.jpeg" class="thumbnail">
         </button>
 
-        <button class="project-link" onclick="showProjectViewer('template')">
+        <button class="project-link" onclick="showProjectViewer('recordplayer')">
             <div class="project-info">
                 <h2 class="project-title">FPGA-Powered Record Player</h2>
                 <div class="project-status-tags">
