--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Playfair+Display:b|Lato">
-        <link rel="stylesheet" type="text/css" href="main.css"/>
+        <link rel="stylesheet" type="text/css" href="styles/main.css"/>
         <script src="./home.js"></script>
         <title>𝙍𝙞𝙘𝙝𝙞𝙚 𝙍𝙖𝙮𝙢𝙤𝙣𝙙 𝙒𝙤𝙣𝙜</title>
         <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/597/597874.png">
@@ -112,7 +112,7 @@
                             <span></span>
                             <h3>"Turtleback" Electric Longboard</h3>
                             <img src="https://img.shields.io/badge/In_Progress-yellow" class="project-status">
-                            <p>The <em>Turtleback</em> is a personal motorized longboard, with a custom-built chasis and driven by an Arduino Uno.</p>
+                            <p>The <em>Turtleback</em> is a personal motorized longboard, with a custom-built chasis and driven by an Arduino Uno. It operates on a 24V battery and has an estimated battery life of 1+ hours.</p>
                         </div>
                         <div>
                             <img src="./images/placeholder.png" class="thumbnail"/>
@@ -150,11 +150,12 @@
                                 I rely mostly on a Canon SX-510, but I don't mind using a smartphone camera if it means capturing a photo before it's gone.
                             </p>
                         </div>
-                        <div>
+                        <!-- TODO: get an image to use for rock climbing lol -->
+                        <!-- <div>
                             <h3>Rock Climbing</h3>
                             <img src="./images/placeholder.png" class="thumbnail">
                             <p>Between classes,</p>
-                        </div>
+                        </div> -->
                         <div>
                             <h3>Sandbox & Story Games</h3>
                             <img src="./images/ksp.png" class="thumbnail">
