--- a/temp.html
+++ b/temp.html
@@ -1,10 +1,8 @@
+<!-- NEVER to be used as a page itself, only an easy redirect -->
 <!DOCTYPE html>
 <html lang="en">
     <head>
         <meta http-equiv="refresh" content="0;URL=./index.html" />
         <title>Loading...</title>
-        <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/597/597874.png">
     </head>
-    <body style="background-color:rgb(40, 40, 40);">
-    </body>
 </html>
