--- a/portfolio.html
+++ b/portfolio.html
@@ -30,7 +30,7 @@
             <img src="./images/game-of-life.jpg" class="thumbnail">
         </button>
 
-        <button class="project-link" onclick="showProjectViewer('fifo_stack')">
+        <!-- <button class="project-link" onclick="showProjectViewer('fifo_stack')">
             <div class="project-info">
                 <h2 class="project-title">FIFO stack Verilog demo</h2>
                 <div class="project-status-tags">
@@ -39,17 +39,17 @@
                 </div>
             </div>
             <img src="./images/3d_print.jpg" class="thumbnail">
-        </button>
+        </button> -->
 
-        <!-- <button class="project-link" onclick="showProjectViewer('fpga_clock')">
+        <button class="project-link" onclick="showProjectViewer('alarm_clock')">
             <div class="project-info">
-                <h2 class="project-title">FPGA-based Digital Alarm Clock</h2>
+                <h2 class="project-title">FPGA Digital Alarm Clock</h2>
                 <div class="project-status-tags">
                     <img src="https://img.shields.io/badge/In_Progress-yellow">
                 </div>
             </div>
             <img src="./images/jpl.jpeg" class="thumbnail">
-        </button> -->
+        </button>
 
         <button class="project-link" onclick="showProjectViewer('longboard')">
             <div class="project-info">
@@ -68,7 +68,7 @@
                     <img src="https://img.shields.io/badge/Planned 2024-red">
                 </div>
             </div>
-            <img src="./images/0-8-4.jpeg" class="thumbnail">
+            <img src="./images/mechy_bottom.png" class="thumbnail">
         </button>
 
         <button class="project-link" onclick="showProjectViewer('recordplayer')">
