--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,7 @@
                     <img src="https://img.shields.io/badge/Completed_2023-green">
                 </div>
             </div>
-            <img src="./images/game-of-life.jpg" class="thumbnail">
+            <img src="https://github.com/Raymond-exe/Conway.v/assets/42707243/cc5fa935-eb8a-4adc-9eb4-0fd7a96c14f7" class="thumbnail">
         </button>
 
         <!-- <button class="project-link" onclick="showProjectViewer('fifo_stack')">
@@ -45,10 +45,10 @@
             <div class="project-info">
                 <h2 class="project-title">FPGA Digital Alarm Clock</h2>
                 <div class="project-status-tags">
-                    <img src="https://img.shields.io/badge/In_Progress-yellow">
+                    <img src="https://img.shields.io/badge/Completed_2024-green">
                 </div>
             </div>
-            <img src="./images/jpl.jpeg" class="thumbnail">
+            <img src="./images/alarm_clk.jpeg" class="thumbnail">
         </button>
 
         <button class="project-link" onclick="showProjectViewer('longboard')">
@@ -78,7 +78,7 @@
                     <img src="https://img.shields.io/badge/Planned 2024-red">
                 </div>
             </div>
-            <img src="./images/jpl.jpeg" class="thumbnail">
+            <!-- <img src="./images/placeholder.png" class="thumbnail"> -->
         </button>
     </div>
     <div id="project-viewer" class="hidden">
