--- a/portfolio.html
+++ b/portfolio.html
@@ -58,7 +58,7 @@
                     <img src="https://img.shields.io/badge/In_Progress-yellow">
                 </div>
             </div>
-            <img src="./images/hotel-california.jpg" class="thumbnail">
+            <img src="./images/longboard.jpg" class="thumbnail">
         </button>
 
         <button class="project-link" onclick="showProjectViewer('mechy')">
