--- a/temp.html
+++ b/temp.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta http-equiv="refresh" content="0;URL=https://docs.google.com/presentation/d/1rPTtpnuNdokEEfKz5FygXuJMRvAUoawQKWd6cTMI3ok/edit?usp=sharing" />
+        <meta http-equiv="refresh" content="0;URL=./index.html" />
         <title>Loading...</title>
     </head>
 </html>
