--- a/portfolio.html
+++ b/portfolio.html
@@ -65,7 +65,7 @@
             <div class="project-info">
                 <h2 class="project-title">"Mechy" Raspberry Pi Pico Motor Shield</h2>
                 <div class="project-status-tags">
-                    <img src="https://img.shields.io/badge/Planned 2024-red">
+                    <img src="https://img.shields.io/badge/In_Progress-yellow">
                 </div>
             </div>
             <img src="./images/mechy_bottom.png" class="thumbnail">
