--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- Look at you sneaky person, breaking in early O_O -->
-        <!-- <meta http-equiv="refresh" content="0;URL=/home.html" /> -->
+        <meta http-equiv="refresh" content="0;URL=/portfolio.html" />
         <link rel="stylesheet" type="text/css" href="styles/main.css"/>
         <style>
         body {
@@ -15,7 +15,7 @@
         <title>𝙍𝙞𝙘𝙝𝙞𝙚 𝙍𝙖𝙮𝙢𝙤𝙣𝙙 𝙒𝙤𝙣𝙜</title>
         <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/597/597874.png">
     </head>
-    <body style="background-color:rgb(40, 40, 40);">
+    <!-- <body style="background-color:rgb(40, 40, 40);">
         <div class="fade-in-text">
             <b style="color: rgb(240, 240, 240); font-size: 75%;font-family: 'Playfair Display', sans-serif;">Sorry, you're early!</b>
             <p style="color: rgb(240, 240, 240); font-size: 30%;font-family: 'Lato', sans-serif;">I'm still working on this site, <a class="inlineLink" href="/b.html" target="_blank">want to play Blackjack instead?</a></p>
@@ -33,7 +33,7 @@
                 <img alt="Email" src="https://img.shields.io/badge/Email-EA4335?style=for-the-badge&logo=gmail&logoColor=white">
             </a>
           </footer>
-    </body>
+    </body> -->
 </html>
 <!-- Made by yours truly 😉 ~Raymond -->
 <!-- source: https://github.com/Raymond-exe/raymond-exe.github.io/ -->
