Removing temp redirect

--- a/temp.html
+++ b/temp.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta http-equiv="refresh" content="0;URL=https://docs.google.com/presentation/d/1UJbKFDgFR3J9op_13Qul-1qXylxdeck_k1oXUX8vu8Y/view" />
+        <meta http-equiv="refresh" content="0;URL=./index.html" />
         <title>Loading...</title>
     </head>
 </html>
