Add drone turret to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -19,6 +19,17 @@
             <h3 class="centered">COMPUTER ENGINEERING // PROJECT PORTFOLIO</h3>
         </div>
 
+        <button class="project-link" onclick="showProjectViewer('drone_turret')">
+            <div class="project-info">
+                <h2 class="project-title">Autonomous Drone-Targeting Dart Turret</h2>
+                <div class="project-status-tags">
+                    <img src="https://img.shields.io/badge/Assignment-blue">
+                    <img src="https://img.shields.io/badge/Completed_2024-green">
+                </div>
+            </div>
+            <img src="./images/turret_thumbnail.jpg" class="thumbnail">
+        </button>
+
         <button class="project-link" onclick="showProjectViewer('game_of_life')">
             <div class="project-info">
                 <h2 class="project-title">Conway's <em>Game of Life</em> in Verilog</h2>
@@ -29,17 +40,6 @@
             </div>
             <img src="https://github.com/Raymond-exe/Conway.v/assets/42707243/cc5fa935-eb8a-4adc-9eb4-0fd7a96c14f7" class="thumbnail">
         </button>
-
-        <!-- <button class="project-link" onclick="showProjectViewer('fifo_stack')">
-            <div class="project-info">
-                <h2 class="project-title">FIFO stack Verilog demo</h2>
-                <div class="project-status-tags">
-                    <img src="https://img.shields.io/badge/Assignment-blue">
-                    <img src="https://img.shields.io/badge/Completed_2023-green">
-                </div>
-            </div>
-            <img src="./images/3d_print.jpg" class="thumbnail">
-        </button> -->
 
         <button class="project-link" onclick="showProjectViewer('alarm_clock')">
             <div class="project-info">
