--- a/portfolio.html
+++ b/portfolio.html
@@ -74,7 +74,7 @@
     </div>
     <div id="project-viewer" class="hidden">
         <div id="close-project" onclick="hideProjectViewer()">≪ BACK</div>
-        <md-block id="markdown-renderer" src/>
+        <md-block id="markdown-renderer"/>
     </div>
 
     <!-- Button to toggle dark mode -->
