Add bamboo files to countdown

--- a/countdown.html
+++ b/countdown.html
@@ -7,9 +7,15 @@
           font-family: "SerifGothicHeavy";
           src: url("./fonts/SerifGothicHeavy.otf");
       }
+      @font-face {
+          font-family: "Bamboo";
+          src: url("./fonts/Bamboo.ttf");
+      }
 
       body {
         background-color: black;
+        /* background-image: url("./images/bamboo.png");
+        background-repeat: repeat; */
       }
       div {
         margin: 0;
