Reorganizing images into directories

--- a/portfolio.html
+++ b/portfolio.html
@@ -39,7 +39,7 @@
                     <img src="https://img.shields.io/badge/Completed_2024-green">
                 </div>
             </div>
-            <img src="./images/alarm_clk.jpeg" class="thumbnail">
+            <img src="./images/clock/alarm_clk.jpeg" class="thumbnail">
         </button>
 
         <button class="project-link" onclick="showProjectViewer('game_of_life')">
@@ -62,7 +62,7 @@
                     <img src="https://img.shields.io/badge/In_Progress-yellow">
                 </div>
             </div>
-            <img src="./images/longboard.jpg" class="thumbnail">
+            <img src="./images/longboard/longboard.jpg" class="thumbnail">
         </button>
 
         <button class="project-link" onclick="showProjectViewer('mechy')">
@@ -73,7 +73,7 @@
                     <img src="https://img.shields.io/badge/In_Progress-yellow">
                 </div>
             </div>
-            <img src="./images/mechy_bottom.png" class="thumbnail">
+            <img src="./images/mechy/bottom_render.png" class="thumbnail">
         </button>
 
     </div>
