--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,10 @@
     <div id="portfolio-container">
         <div>
             <h1 class="centered">Raymond Wong</h1>
+            <br>
             <h3 class="centered">COMPUTER ENGINEERING // PROJECT PORTFOLIO</h3>
+            <br>
+            <h3 style="font-weight:100;" class="centered">Click on a project below to view more information</h3>
         </div>
 
         <button class="project-link" onclick="showProjectViewer('drone_turret')">
