--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
             <br>
             <h3 class="centered">COMPUTER ENGINEERING // PROJECT PORTFOLIO</h3>
             <br>
-            <h3 style="font-weight:100;" class="centered">Click on a project below to view more information</h3>
+            <h3 style="font-weight:100;" id="instruction" class="centered">Click on a project below to view more information</h3>
         </div>
 
         <button class="project-link" onclick="showProjectViewer('drone_turret')">
