Hide content until it's finished loading

--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
     <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/597/597874.png">
 </head>
 
-<body id="body">
+<body id="body" class="hidden">
     <div id="portfolio-container">
         <div>
             <h1 class="centered">Raymond Wong</h1>
