Set mechy status to 'On Hold'

--- a/portfolio.html
+++ b/portfolio.html
@@ -45,6 +45,17 @@
             <img src="./images/clock/alarm_clk.jpeg" class="thumbnail">
         </button>
 
+        <button class="project-link" onclick="showProjectViewer('longboard')">
+            <div class="project-info">
+                <h2 class="project-title">Electric Longboard</h2>
+                <div class="project-status-tags">
+                    <img src="https://img.shields.io/badge/Arduino_Uno-008385">
+                    <img src="https://img.shields.io/badge/Completed_2024-green">
+                </div>
+            </div>
+            <img src="./images/longboard/longboard.jpg" class="thumbnail">
+        </button>
+
         <button class="project-link" onclick="showProjectViewer('game_of_life')">
             <div class="project-info">
                 <h2 class="project-title">Conway's <em>Game of Life</em> in Verilog</h2>
@@ -57,23 +68,13 @@
             <img src="https://github.com/Raymond-exe/Conway.v/assets/42707243/cc5fa935-eb8a-4adc-9eb4-0fd7a96c14f7" class="thumbnail">
         </button>
 
-        <button class="project-link" onclick="showProjectViewer('longboard')">
-            <div class="project-info">
-                <h2 class="project-title">Electric Longboard</h2>
-                <div class="project-status-tags">
-                    <img src="https://img.shields.io/badge/Arduino_Uno-008385">
-                    <img src="https://img.shields.io/badge/In_Progress-yellow">
-                </div>
-            </div>
-            <img src="./images/longboard/longboard.jpg" class="thumbnail">
-        </button>
-
         <button class="project-link" onclick="showProjectViewer('mechy')">
             <div class="project-info">
                 <h2 class="project-title">"Mechy" Raspberry Pi Pico Motor Shield</h2>
                 <div class="project-status-tags">
                     <img src="https://img.shields.io/badge/Raspberry_Pi_Pico-e00053">
-                    <img src="https://img.shields.io/badge/In_Progress-yellow">
+                    <img src="https://img.shields.io/badge/On_Hold-orange">
+                    <!-- <img src="https://img.shields.io/badge/In_Progress-yellow"> -->
                 </div>
             </div>
             <img src="./images/mechy/bottom_render.png" class="thumbnail">
