--- a/portfolio.html
+++ b/portfolio.html
@@ -22,6 +22,17 @@
             <h3 style="font-weight:100;" id="instruction" class="centered">Click on a project below to view more information</h3>
         </div>
 
+        <button class="project-link" onclick="showProjectViewer('capstone')">
+            <div class="project-info">
+                <h2 class="project-title">Capstone Project - Sensor Fusion for FPV Drones</h2>
+                <div class="project-status-tags">
+                    <img src="https://img.shields.io/badge/ESP32-black">
+                    <img src="https://img.shields.io/badge/Work_in_progress-yellow">
+                </div>
+            </div>
+            <img src="./images/liftoff.gif" class="thumbnail">
+        </button>
+
         <button class="project-link" onclick="showProjectViewer('drone_turret')">
             <div class="project-info">
                 <h2 class="project-title">Autonomous Drone-Targeting Dart Turret</h2>
