--- a/portfolio.html
+++ b/portfolio.html
@@ -30,7 +30,7 @@
                     <img src="https://img.shields.io/badge/Work_in_progress-yellow">
                 </div>
             </div>
-            <img src="./images/liftoff.gif" class="thumbnail">
+            <img src="./images/capstone/calibration.gif" class="thumbnail">
         </button>
 
         <button class="project-link" onclick="showProjectViewer('drone_turret')">
